# pyki

./: README.md  pyproject.toml
certipy/: certipy.py  main.py
certipy/utils/: CertificateCloner.py
pyki/: pyki.py
pyki/utils/: CertificateCloner.py  CertificateDownloader.py  CertificatePrinter.py  __init__.py  core.py
testdata/: google.pem  stackexchange.pem
